--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "dr-svg-sprites",
+  "name": "dr-svg-sprites-hiulit",
   "description": "Create SVG sprites with PNG fallbacks at needed sizes",
   "version": "0.9.31",
   "homepage": "",
   "author": {
-    "name": "rasmusfl0e",
-    "email": "rasmusfl0e@gmail.com"
+    "name": "hiulit",
+    "email": "hiulit@gmail.com"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/drdk/dr-svg-sprites.git"
+    "url": "git://github.com/hiulit/dr-svg-sprites.git"
   },
   "bugs": {
-    "url": "https://github.com/drdk/dr-svg-sprites/issues"
+    "url": "https://github.com/hiulit/dr-svg-sprites/issues"
   },
   "licenses": [
     {
